# fastmaxent

./: .gitignore  LICENSE  README.md  fastmaxent_cli.py  fastmaxent_demo.py  pyproject.toml  requirements.txt  setup.py
examples/: example.ipynb
src/: fastmaxent.py
src/fastmaxent/: __init__.py  fastmaxent.py  inference.py  optimizer.py
